src/parser.output
Grammar

    0 $accept: transformgraph "end file"

    1 transformgraph: kernellist activenode

    2 activenode: ACTIVE id SEMICOL

    3 kernellist: kernel kernellist
    4           | ε

    5 kernel: DTL id inputlistwrapper ASSIGN LCURLY program RCURLY

    6 inputlistwrapper: COLON inputlist
    7                 | ε

    8 inputlist: id COMMA inputlist
    9          | id

   10 program: constdecls forstatement

   11 constdecls: constdecls constdecl
   12           | constdecls metadatastreamdecl
   13           | ε

   14 metadatastreamdecl: METADATASTREAM LESS intlit COMMA intlit GREATER id SEMICOL
   15                   | METADATASTREAM LESS intlit COMMA id GREATER id SEMICOL

   16 constdecl: type id ASSIGN intlit SEMICOL
   17          | NOPT type id ASSIGN intlit SEMICOL
   18          | type id ASSIGN LCURLY intlist RCURLY SEMICOL

   19 intlist: intlit COMMA intlist
   20        | intlit
   21        | ε

   22 forstatement: FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY
   23             | FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY innernest RCURLY

   24 outstatements: outstatements outstatement
   25              | outstatement

   26 innernest: outstatements
   27          | ifstatement
   28          | switchstatement

   29 ifstatement: IF LPAREN ISEVEN id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   30            | IF LPAREN id LESS id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   31            | IF LPAREN id LESSEQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   32            | IF LPAREN id GREATER id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   33            | IF LPAREN id GREATEREQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   34            | IF LPAREN ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   35            | IF LPAREN ISEDGE id OR ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   36            | IF LPAREN ISEDGE id AND ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   37            | IF LPAREN PAD id id id id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

   38 switchstatement: SWITCH LPAREN id RPAREN LCURLY casestatements RCURLY

   39 casestatements: casestatement casestatements
   40               | casestatement

   41 casestatement: CASE COLON outstatements

   42 outstatement: OUT ASSIGN expr SEMICOL

   43 type: INT

   44 expr: expr CROSS expr
   45     | expr LESS expr
   46     | expr STAR expr
   47     | expr MINUS expr
   48     | term

   49 unarystmt: loc POSTINC

   50 term: factor
   51     | LPAREN expr RPAREN

   52 factor: intlit
   53       | loc

   54 intlit: INTLITERAL

   55 loc: id
   56    | id LBRACKET id RBRACKET

   57 id: ID


Terminals, with rules where they appear

    "end file" (0) 0
    error (256)
    ASSIGN <DTL::Token *> (258) 5 16 17 18 42
    NOPT <DTL::Token *> (259) 17
    ID <DTL::IDToken *> (260) 57
    INT <DTL::Token *> (261) 43
    INTLITERAL <DTL::IntLitToken *> (262) 54
    LCURLY <DTL::Token *> (263) 5 18 22 23 29 30 31 32 33 34 35 36 37 38
    LESS <DTL::Token *> (264) 14 15 30 45
    LESSEQUAL <DTL::Token *> (265) 31
    GREATER <DTL::Token *> (266) 14 15 32
    GREATEREQUAL <DTL::Token *> (267) 33
    LPAREN <DTL::Token *> (268) 22 23 29 30 31 32 33 34 35 36 37 38 51
    CROSS <DTL::Token *> (269) 44
    POSTINC <DTL::Token *> (270) 49
    RCURLY <DTL::Token *> (271) 5 18 22 23 29 30 31 32 33 34 35 36 37 38
    RPAREN <DTL::Token *> (272) 22 23 29 30 31 32 33 34 35 36 37 38 51
    SEMICOL <DTL::Token *> (273) 2 14 15 16 17 18 22 23 42
    STAR <DTL::Token *> (274) 46
    FOR <DTL::Token *> (275) 22 23
    OUT <DTL::Token *> (276) 42
    COMMA <DTL::Token *> (277) 8 14 15 19
    LBRACKET <DTL::Token *> (278) 56
    RBRACKET <DTL::Token *> (279) 56
    MINUS <DTL::Token *> (280) 47
    COLON <DTL::Token *> (281) 6 41
    CASE <DTL::Token *> (282) 41
    SWITCH <DTL::Token *> (283) 38
    IF <DTL::Token *> (284) 29 30 31 32 33 34 35 36 37
    ELSE <DTL::Token *> (285) 29 30 31 32 33 34 35 36 37
    ISEVEN <DTL::Token *> (286) 29
    ISEDGE <DTL::Token *> (287) 34 35 36
    OR <DTL::Token *> (288) 35
    AND <DTL::Token *> (289) 36
    PAD <DTL::Token *> (290) 37
    METADATASTREAM <DTL::Token *> (291) 14 15
    DTL <DTL::Token *> (292) 5
    ACTIVE <DTL::Token *> (293) 2


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    transformgraph <DTL::TransformGraph*> (40)
        on left: 1
        on right: 0
    activenode <DTL::IDNode*> (41)
        on left: 2
        on right: 1
    kernellist <std::vector<DTL::DTLKernelNode*>> (42)
        on left: 3 4
        on right: 1 3
    kernel <DTL::DTLKernelNode*> (43)
        on left: 5
        on right: 3
    inputlistwrapper <std::vector<DTL::IDNode*>> (44)
        on left: 6 7
        on right: 5
    inputlist <std::vector<DTL::IDNode*>> (45)
        on left: 8 9
        on right: 6 8
    program <DTL::ProgramNode*> (46)
        on left: 10
        on right: 5
    constdecls <std::vector<DTL::StmtNode*>> (47)
        on left: 11 12 13
        on right: 10 11 12
    metadatastreamdecl <DTL::MetadataStreamDeclNode*> (48)
        on left: 14 15
        on right: 12
    constdecl <DTL::StmtNode*> (49)
        on left: 16 17 18
        on right: 11 22 23
    intlist <std::vector<IntLitNode*>> (50)
        on left: 19 20 21
        on right: 18 19
    forstatement <DTL::ForStmtNode*> (51)
        on left: 22 23
        on right: 10 22
    outstatements <std::vector<DTL::StmtNode*>> (52)
        on left: 24 25
        on right: 24 26 29 30 31 32 33 34 35 36 37 41
    innernest <std::vector<DTL::StmtNode*>> (53)
        on left: 26 27 28
        on right: 23
    ifstatement <DTL::StmtNode*> (54)
        on left: 29 30 31 32 33 34 35 36 37
        on right: 27
    switchstatement <DTL::StmtNode*> (55)
        on left: 38
        on right: 28
    casestatements <std::vector<std::vector<DTL::StmtNode*>>> (56)
        on left: 39 40
        on right: 38 39
    casestatement <std::vector<DTL::StmtNode*>> (57)
        on left: 41
        on right: 39 40
    outstatement <DTL::StmtNode*> (58)
        on left: 42
        on right: 24 25
    type <DTL::TypeNode*> (59)
        on left: 43
        on right: 16 17 18
    expr <DTL::ExpNode*> (60)
        on left: 44 45 46 47 48
        on right: 22 23 42 44 45 46 47 51
    unarystmt <DTL::StmtNode*> (61)
        on left: 49
        on right: 22 23
    term <DTL::ExpNode*> (62)
        on left: 50 51
        on right: 48
    factor <DTL::ExpNode*> (63)
        on left: 52 53
        on right: 50
    intlit <DTL::IntLitNode*> (64)
        on left: 54
        on right: 14 15 16 17 19 20 52
    loc <DTL::LocNode*> (65)
        on left: 55 56
        on right: 49 53
    id <DTL::IDNode*> (66)
        on left: 57
        on right: 2 5 8 9 14 15 16 17 18 29 30 31 32 33 34 35 36 37 38 55 56


State 0

    0 $accept: • transformgraph "end file"

    DTL  shift, and go to state 1

    $default  reduce using rule 4 (kernellist)

    transformgraph  go to state 2
    kernellist      go to state 3
    kernel          go to state 4


State 1

    5 kernel: DTL • id inputlistwrapper ASSIGN LCURLY program RCURLY

    ID  shift, and go to state 5

    id  go to state 6


State 2

    0 $accept: transformgraph • "end file"

    "end file"  shift, and go to state 7


State 3

    1 transformgraph: kernellist • activenode

    ACTIVE  shift, and go to state 8

    activenode  go to state 9


State 4

    3 kernellist: kernel • kernellist

    DTL  shift, and go to state 1

    $default  reduce using rule 4 (kernellist)

    kernellist  go to state 10
    kernel      go to state 4


State 5

   57 id: ID •

    $default  reduce using rule 57 (id)


State 6

    5 kernel: DTL id • inputlistwrapper ASSIGN LCURLY program RCURLY

    COLON  shift, and go to state 11

    $default  reduce using rule 7 (inputlistwrapper)

    inputlistwrapper  go to state 12


State 7

    0 $accept: transformgraph "end file" •

    $default  accept


State 8

    2 activenode: ACTIVE • id SEMICOL

    ID  shift, and go to state 5

    id  go to state 13


State 9

    1 transformgraph: kernellist activenode •

    $default  reduce using rule 1 (transformgraph)


State 10

    3 kernellist: kernel kernellist •

    $default  reduce using rule 3 (kernellist)


State 11

    6 inputlistwrapper: COLON • inputlist

    ID  shift, and go to state 5

    inputlist  go to state 14
    id         go to state 15


State 12

    5 kernel: DTL id inputlistwrapper • ASSIGN LCURLY program RCURLY

    ASSIGN  shift, and go to state 16


State 13

    2 activenode: ACTIVE id • SEMICOL

    SEMICOL  shift, and go to state 17


State 14

    6 inputlistwrapper: COLON inputlist •

    $default  reduce using rule 6 (inputlistwrapper)


State 15

    8 inputlist: id • COMMA inputlist
    9          | id •

    COMMA  shift, and go to state 18

    $default  reduce using rule 9 (inputlist)


State 16

    5 kernel: DTL id inputlistwrapper ASSIGN • LCURLY program RCURLY

    LCURLY  shift, and go to state 19


State 17

    2 activenode: ACTIVE id SEMICOL •

    $default  reduce using rule 2 (activenode)


State 18

    8 inputlist: id COMMA • inputlist

    ID  shift, and go to state 5

    inputlist  go to state 20
    id         go to state 15


State 19

    5 kernel: DTL id inputlistwrapper ASSIGN LCURLY • program RCURLY

    $default  reduce using rule 13 (constdecls)

    program     go to state 21
    constdecls  go to state 22


State 20

    8 inputlist: id COMMA inputlist •

    $default  reduce using rule 8 (inputlist)


State 21

    5 kernel: DTL id inputlistwrapper ASSIGN LCURLY program • RCURLY

    RCURLY  shift, and go to state 23


State 22

   10 program: constdecls • forstatement
   11 constdecls: constdecls • constdecl
   12           | constdecls • metadatastreamdecl

    NOPT            shift, and go to state 24
    INT             shift, and go to state 25
    FOR             shift, and go to state 26
    METADATASTREAM  shift, and go to state 27

    metadatastreamdecl  go to state 28
    constdecl           go to state 29
    forstatement        go to state 30
    type                go to state 31


State 23

    5 kernel: DTL id inputlistwrapper ASSIGN LCURLY program RCURLY •

    $default  reduce using rule 5 (kernel)


State 24

   17 constdecl: NOPT • type id ASSIGN intlit SEMICOL

    INT  shift, and go to state 25

    type  go to state 32


State 25

   43 type: INT •

    $default  reduce using rule 43 (type)


State 26

   22 forstatement: FOR • LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY
   23             | FOR • LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY innernest RCURLY

    LPAREN  shift, and go to state 33


State 27

   14 metadatastreamdecl: METADATASTREAM • LESS intlit COMMA intlit GREATER id SEMICOL
   15                   | METADATASTREAM • LESS intlit COMMA id GREATER id SEMICOL

    LESS  shift, and go to state 34


State 28

   12 constdecls: constdecls metadatastreamdecl •

    $default  reduce using rule 12 (constdecls)


State 29

   11 constdecls: constdecls constdecl •

    $default  reduce using rule 11 (constdecls)


State 30

   10 program: constdecls forstatement •

    $default  reduce using rule 10 (program)


State 31

   16 constdecl: type • id ASSIGN intlit SEMICOL
   18          | type • id ASSIGN LCURLY intlist RCURLY SEMICOL

    ID  shift, and go to state 5

    id  go to state 35


State 32

   17 constdecl: NOPT type • id ASSIGN intlit SEMICOL

    ID  shift, and go to state 5

    id  go to state 36


State 33

   22 forstatement: FOR LPAREN • constdecl expr SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY
   23             | FOR LPAREN • constdecl expr SEMICOL unarystmt RPAREN LCURLY innernest RCURLY

    NOPT  shift, and go to state 24
    INT   shift, and go to state 25

    constdecl  go to state 37
    type       go to state 31


State 34

   14 metadatastreamdecl: METADATASTREAM LESS • intlit COMMA intlit GREATER id SEMICOL
   15                   | METADATASTREAM LESS • intlit COMMA id GREATER id SEMICOL

    INTLITERAL  shift, and go to state 38

    intlit  go to state 39


State 35

   16 constdecl: type id • ASSIGN intlit SEMICOL
   18          | type id • ASSIGN LCURLY intlist RCURLY SEMICOL

    ASSIGN  shift, and go to state 40


State 36

   17 constdecl: NOPT type id • ASSIGN intlit SEMICOL

    ASSIGN  shift, and go to state 41


State 37

   22 forstatement: FOR LPAREN constdecl • expr SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY
   23             | FOR LPAREN constdecl • expr SEMICOL unarystmt RPAREN LCURLY innernest RCURLY

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 43
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 38

   54 intlit: INTLITERAL •

    $default  reduce using rule 54 (intlit)


State 39

   14 metadatastreamdecl: METADATASTREAM LESS intlit • COMMA intlit GREATER id SEMICOL
   15                   | METADATASTREAM LESS intlit • COMMA id GREATER id SEMICOL

    COMMA  shift, and go to state 49


State 40

   16 constdecl: type id ASSIGN • intlit SEMICOL
   18          | type id ASSIGN • LCURLY intlist RCURLY SEMICOL

    INTLITERAL  shift, and go to state 38
    LCURLY      shift, and go to state 50

    intlit  go to state 51


State 41

   17 constdecl: NOPT type id ASSIGN • intlit SEMICOL

    INTLITERAL  shift, and go to state 38

    intlit  go to state 52


State 42

   51 term: LPAREN • expr RPAREN

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 53
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 43

   22 forstatement: FOR LPAREN constdecl expr • SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY
   23             | FOR LPAREN constdecl expr • SEMICOL unarystmt RPAREN LCURLY innernest RCURLY
   44 expr: expr • CROSS expr
   45     | expr • LESS expr
   46     | expr • STAR expr
   47     | expr • MINUS expr

    LESS     shift, and go to state 54
    CROSS    shift, and go to state 55
    SEMICOL  shift, and go to state 56
    STAR     shift, and go to state 57
    MINUS    shift, and go to state 58


State 44

   48 expr: term •

    $default  reduce using rule 48 (expr)


State 45

   50 term: factor •

    $default  reduce using rule 50 (term)


State 46

   52 factor: intlit •

    $default  reduce using rule 52 (factor)


State 47

   53 factor: loc •

    $default  reduce using rule 53 (factor)


State 48

   55 loc: id •
   56    | id • LBRACKET id RBRACKET

    LBRACKET  shift, and go to state 59

    $default  reduce using rule 55 (loc)


State 49

   14 metadatastreamdecl: METADATASTREAM LESS intlit COMMA • intlit GREATER id SEMICOL
   15                   | METADATASTREAM LESS intlit COMMA • id GREATER id SEMICOL

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38

    intlit  go to state 60
    id      go to state 61


State 50

   18 constdecl: type id ASSIGN LCURLY • intlist RCURLY SEMICOL

    INTLITERAL  shift, and go to state 38

    $default  reduce using rule 21 (intlist)

    intlist  go to state 62
    intlit   go to state 63


State 51

   16 constdecl: type id ASSIGN intlit • SEMICOL

    SEMICOL  shift, and go to state 64


State 52

   17 constdecl: NOPT type id ASSIGN intlit • SEMICOL

    SEMICOL  shift, and go to state 65


State 53

   44 expr: expr • CROSS expr
   45     | expr • LESS expr
   46     | expr • STAR expr
   47     | expr • MINUS expr
   51 term: LPAREN expr • RPAREN

    LESS    shift, and go to state 54
    CROSS   shift, and go to state 55
    RPAREN  shift, and go to state 66
    STAR    shift, and go to state 57
    MINUS   shift, and go to state 58


State 54

   45 expr: expr LESS • expr

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 67
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 55

   44 expr: expr CROSS • expr

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 68
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 56

   22 forstatement: FOR LPAREN constdecl expr SEMICOL • unarystmt RPAREN LCURLY forstatement RCURLY
   23             | FOR LPAREN constdecl expr SEMICOL • unarystmt RPAREN LCURLY innernest RCURLY

    ID  shift, and go to state 5

    unarystmt  go to state 69
    loc        go to state 70
    id         go to state 48


State 57

   46 expr: expr STAR • expr

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 71
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 58

   47 expr: expr MINUS • expr

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 72
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 59

   56 loc: id LBRACKET • id RBRACKET

    ID  shift, and go to state 5

    id  go to state 73


State 60

   14 metadatastreamdecl: METADATASTREAM LESS intlit COMMA intlit • GREATER id SEMICOL

    GREATER  shift, and go to state 74


State 61

   15 metadatastreamdecl: METADATASTREAM LESS intlit COMMA id • GREATER id SEMICOL

    GREATER  shift, and go to state 75


State 62

   18 constdecl: type id ASSIGN LCURLY intlist • RCURLY SEMICOL

    RCURLY  shift, and go to state 76


State 63

   19 intlist: intlit • COMMA intlist
   20        | intlit •

    COMMA  shift, and go to state 77

    $default  reduce using rule 20 (intlist)


State 64

   16 constdecl: type id ASSIGN intlit SEMICOL •

    $default  reduce using rule 16 (constdecl)


State 65

   17 constdecl: NOPT type id ASSIGN intlit SEMICOL •

    $default  reduce using rule 17 (constdecl)


State 66

   51 term: LPAREN expr RPAREN •

    $default  reduce using rule 51 (term)


State 67

   44 expr: expr • CROSS expr
   45     | expr • LESS expr
   45     | expr LESS expr •
   46     | expr • STAR expr
   47     | expr • MINUS expr

    CROSS  shift, and go to state 55
    STAR   shift, and go to state 57
    MINUS  shift, and go to state 58

    $default  reduce using rule 45 (expr)


State 68

   44 expr: expr • CROSS expr
   44     | expr CROSS expr •
   45     | expr • LESS expr
   46     | expr • STAR expr
   47     | expr • MINUS expr

    STAR   shift, and go to state 57
    MINUS  shift, and go to state 58

    $default  reduce using rule 44 (expr)


State 69

   22 forstatement: FOR LPAREN constdecl expr SEMICOL unarystmt • RPAREN LCURLY forstatement RCURLY
   23             | FOR LPAREN constdecl expr SEMICOL unarystmt • RPAREN LCURLY innernest RCURLY

    RPAREN  shift, and go to state 78


State 70

   49 unarystmt: loc • POSTINC

    POSTINC  shift, and go to state 79


State 71

   44 expr: expr • CROSS expr
   45     | expr • LESS expr
   46     | expr • STAR expr
   46     | expr STAR expr •
   47     | expr • MINUS expr

    $default  reduce using rule 46 (expr)


State 72

   44 expr: expr • CROSS expr
   45     | expr • LESS expr
   46     | expr • STAR expr
   47     | expr • MINUS expr
   47     | expr MINUS expr •

    STAR  shift, and go to state 57

    $default  reduce using rule 47 (expr)


State 73

   56 loc: id LBRACKET id • RBRACKET

    RBRACKET  shift, and go to state 80


State 74

   14 metadatastreamdecl: METADATASTREAM LESS intlit COMMA intlit GREATER • id SEMICOL

    ID  shift, and go to state 5

    id  go to state 81


State 75

   15 metadatastreamdecl: METADATASTREAM LESS intlit COMMA id GREATER • id SEMICOL

    ID  shift, and go to state 5

    id  go to state 82


State 76

   18 constdecl: type id ASSIGN LCURLY intlist RCURLY • SEMICOL

    SEMICOL  shift, and go to state 83


State 77

   19 intlist: intlit COMMA • intlist

    INTLITERAL  shift, and go to state 38

    $default  reduce using rule 21 (intlist)

    intlist  go to state 84
    intlit   go to state 63


State 78

   22 forstatement: FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN • LCURLY forstatement RCURLY
   23             | FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN • LCURLY innernest RCURLY

    LCURLY  shift, and go to state 85


State 79

   49 unarystmt: loc POSTINC •

    $default  reduce using rule 49 (unarystmt)


State 80

   56 loc: id LBRACKET id RBRACKET •

    $default  reduce using rule 56 (loc)


State 81

   14 metadatastreamdecl: METADATASTREAM LESS intlit COMMA intlit GREATER id • SEMICOL

    SEMICOL  shift, and go to state 86


State 82

   15 metadatastreamdecl: METADATASTREAM LESS intlit COMMA id GREATER id • SEMICOL

    SEMICOL  shift, and go to state 87


State 83

   18 constdecl: type id ASSIGN LCURLY intlist RCURLY SEMICOL •

    $default  reduce using rule 18 (constdecl)


State 84

   19 intlist: intlit COMMA intlist •

    $default  reduce using rule 19 (intlist)


State 85

   22 forstatement: FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY • forstatement RCURLY
   23             | FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY • innernest RCURLY

    FOR     shift, and go to state 26
    OUT     shift, and go to state 88
    SWITCH  shift, and go to state 89
    IF      shift, and go to state 90

    forstatement     go to state 91
    outstatements    go to state 92
    innernest        go to state 93
    ifstatement      go to state 94
    switchstatement  go to state 95
    outstatement     go to state 96


State 86

   14 metadatastreamdecl: METADATASTREAM LESS intlit COMMA intlit GREATER id SEMICOL •

    $default  reduce using rule 14 (metadatastreamdecl)


State 87

   15 metadatastreamdecl: METADATASTREAM LESS intlit COMMA id GREATER id SEMICOL •

    $default  reduce using rule 15 (metadatastreamdecl)


State 88

   42 outstatement: OUT • ASSIGN expr SEMICOL

    ASSIGN  shift, and go to state 97


State 89

   38 switchstatement: SWITCH • LPAREN id RPAREN LCURLY casestatements RCURLY

    LPAREN  shift, and go to state 98


State 90

   29 ifstatement: IF • LPAREN ISEVEN id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   30            | IF • LPAREN id LESS id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   31            | IF • LPAREN id LESSEQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   32            | IF • LPAREN id GREATER id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   33            | IF • LPAREN id GREATEREQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   34            | IF • LPAREN ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   35            | IF • LPAREN ISEDGE id OR ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   36            | IF • LPAREN ISEDGE id AND ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   37            | IF • LPAREN PAD id id id id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    LPAREN  shift, and go to state 99


State 91

   22 forstatement: FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY forstatement • RCURLY

    RCURLY  shift, and go to state 100


State 92

   24 outstatements: outstatements • outstatement
   26 innernest: outstatements •

    OUT  shift, and go to state 88

    $default  reduce using rule 26 (innernest)

    outstatement  go to state 101


State 93

   23 forstatement: FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY innernest • RCURLY

    RCURLY  shift, and go to state 102


State 94

   27 innernest: ifstatement •

    $default  reduce using rule 27 (innernest)


State 95

   28 innernest: switchstatement •

    $default  reduce using rule 28 (innernest)


State 96

   25 outstatements: outstatement •

    $default  reduce using rule 25 (outstatements)


State 97

   42 outstatement: OUT ASSIGN • expr SEMICOL

    ID          shift, and go to state 5
    INTLITERAL  shift, and go to state 38
    LPAREN      shift, and go to state 42

    expr    go to state 103
    term    go to state 44
    factor  go to state 45
    intlit  go to state 46
    loc     go to state 47
    id      go to state 48


State 98

   38 switchstatement: SWITCH LPAREN • id RPAREN LCURLY casestatements RCURLY

    ID  shift, and go to state 5

    id  go to state 104


State 99

   29 ifstatement: IF LPAREN • ISEVEN id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   30            | IF LPAREN • id LESS id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   31            | IF LPAREN • id LESSEQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   32            | IF LPAREN • id GREATER id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   33            | IF LPAREN • id GREATEREQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   34            | IF LPAREN • ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   35            | IF LPAREN • ISEDGE id OR ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   36            | IF LPAREN • ISEDGE id AND ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   37            | IF LPAREN • PAD id id id id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    ID      shift, and go to state 5
    ISEVEN  shift, and go to state 105
    ISEDGE  shift, and go to state 106
    PAD     shift, and go to state 107

    id  go to state 108


State 100

   22 forstatement: FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY forstatement RCURLY •

    $default  reduce using rule 22 (forstatement)


State 101

   24 outstatements: outstatements outstatement •

    $default  reduce using rule 24 (outstatements)


State 102

   23 forstatement: FOR LPAREN constdecl expr SEMICOL unarystmt RPAREN LCURLY innernest RCURLY •

    $default  reduce using rule 23 (forstatement)


State 103

   42 outstatement: OUT ASSIGN expr • SEMICOL
   44 expr: expr • CROSS expr
   45     | expr • LESS expr
   46     | expr • STAR expr
   47     | expr • MINUS expr

    LESS     shift, and go to state 54
    CROSS    shift, and go to state 55
    SEMICOL  shift, and go to state 109
    STAR     shift, and go to state 57
    MINUS    shift, and go to state 58


State 104

   38 switchstatement: SWITCH LPAREN id • RPAREN LCURLY casestatements RCURLY

    RPAREN  shift, and go to state 110


State 105

   29 ifstatement: IF LPAREN ISEVEN • id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    ID  shift, and go to state 5

    id  go to state 111


State 106

   34 ifstatement: IF LPAREN ISEDGE • id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   35            | IF LPAREN ISEDGE • id OR ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   36            | IF LPAREN ISEDGE • id AND ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    ID  shift, and go to state 5

    id  go to state 112


State 107

   37 ifstatement: IF LPAREN PAD • id id id id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    ID  shift, and go to state 5

    id  go to state 113


State 108

   30 ifstatement: IF LPAREN id • LESS id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   31            | IF LPAREN id • LESSEQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   32            | IF LPAREN id • GREATER id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   33            | IF LPAREN id • GREATEREQUAL id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    LESS          shift, and go to state 114
    LESSEQUAL     shift, and go to state 115
    GREATER       shift, and go to state 116
    GREATEREQUAL  shift, and go to state 117


State 109

   42 outstatement: OUT ASSIGN expr SEMICOL •

    $default  reduce using rule 42 (outstatement)


State 110

   38 switchstatement: SWITCH LPAREN id RPAREN • LCURLY casestatements RCURLY

    LCURLY  shift, and go to state 118


State 111

   29 ifstatement: IF LPAREN ISEVEN id • RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    RPAREN  shift, and go to state 119


State 112

   34 ifstatement: IF LPAREN ISEDGE id • RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   35            | IF LPAREN ISEDGE id • OR ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY
   36            | IF LPAREN ISEDGE id • AND ISEDGE id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    RPAREN  shift, and go to state 120
    OR      shift, and go to state 121
    AND     shift, and go to state 122


State 113

   37 ifstatement: IF LPAREN PAD id • id id id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    ID  shift, and go to state 5

    id  go to state 123


State 114

   30 ifstatement: IF LPAREN id LESS • id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    ID  shift, and go to state 5

    id  go to state 124


State 115

   31 ifstatement: IF LPAREN id LESSEQUAL • id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    ID  shift, and go to state 5

    id  go to state 125


State 116

   32 ifstatement: IF LPAREN id GREATER • id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    ID  shift, and go to state 5

    id  go to state 126


State 117

   33 ifstatement: IF LPAREN id GREATEREQUAL • id RPAREN LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    ID  shift, and go to state 5

    id  go to state 127


State 118

   38 switchstatement: SWITCH LPAREN id RPAREN LCURLY • casestatements RCURLY

    CASE  shift, and go to state 128

    casestatements  go to state 129
    casestatement   go to state 130


State 119

   29 ifstatement: IF LPAREN ISEVEN id RPAREN • LCURLY outstatements RCURLY ELSE LCURLY outstatements RCURLY

    LCURLY  shift, and go to state 131


State 120
